# Tomii

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.rs  pyproject.toml  translator.py
SKILLS/: README.md  diagnose.md  graph-build.md  graph-coarsen.md  install-skills.sh  knob-search.md  plugin-author.md  project-discover.md  run-validate.md
ablation-bench/: Cargo.toml  run.sh
agent-bench/: config.py  harness.py  metrics.py
agent-eval/: .gitignore  adapter.py  analyze.py  config.py  harness.py  nproc_count.py  rescore.py
bench/matcomp-taskflow/: .gitignore  CMakeLists.txt  README.md  run_bench.sh
bench/matcomp-taskflow/src/: helpers.hpp  main.cpp
bench/mimo-bench/tomii/: Cargo.toml  build.rs  build_graph.py  run_bench.py  verify.py
bench/mimo-bench/tomii/graphs/: graph_4nodes.json  graph_4nodes_16x16.json  tddconfig-16x16.json  tddconfig-4x4.json
bench/mimo-bench/tomii/results/post_r1/: mimo_sweep.csv
bench/mimo-bench/tomii/scripts/: run_bench.sh
bench/mimo-bench/tomii/src/: beam_lib.rs  buffer_lib.rs  csi_lib.rs  demul_lib.rs  fft_lib.rs  lib.rs
bench/mimo-bench/tomii/src/bindings/: demod_bindings.rs  fftfuncs_bindings.rs
bench/mimo-bench/tomii/src/common/: comms_constants.rs  comms_lib.rs  config.rs  framestats.rs  structures.rs  symbols.rs  utils_ldpc.rs
bench/pipeline-bench/taskflow/: CMakeLists.txt  run_bench.py
bench/pipeline-bench/taskflow/src/: helpers.hpp  main.cpp
benchmarks/: compare_results.py  download_datasets.sh  parse_synstream_stream.py  run_all_benchmarks.sh
cst_macros/: Cargo.toml
examples/: README.md  dot_out.rs  graph_print.rs  python_ex1.py
examples/matrix-compute/: Cargo.toml  README.md  graph.json  out.txt  reg.rs  report.txt  result.txt  run_bench.py  run_bench.sh  timing.txt  timing_sched.csv  validation.txt  verify.sh  wrappers.rs
examples/matrix-compute/src/: functions.rs  kernel_perf.rs  lib.rs  main.rs  validation.rs  wrap.rs
jraph-core/: Cargo.toml  build.rs  plot.py  translator.py
jraph-core/examples/: dot_out.rs  graph_print.rs
jraph-core/examples/benchmarks/: bindings.rs  functions.rs  main.rs  validation.rs  wrap.rs
jraph-core/examples/cpp_funcs/: main.rs
jraph-core/examples/cpp_funcs/libs/: adder.h
jraph-core/examples/dynamic/: funcs.rs  main.rs
jraph-core/examples/graphs/: bench1.json  bench2.json  bench3.json  dyn.json  graph.json  stream.json
jraph-core/examples/inits/: funcs.rs  main.rs
jraph-core/examples/manualRayon/: funcs.rs  main.rs  validation.rs
jraph-core/examples/rust_funcs/: main.rs  simple_funcs.rs
jraph-core/examples/stream/: funcs.rs  init_funcs.rs  main.rs
jraph-core/examples/testing/: comp.rs  functions.rs  main.rs  multithread.rs  retrieve.rs
jraph-core/src/: clerk.rs  cmtypes.rs  executor.rs  graph_gen.rs  graph_struct.rs  lib.rs  obj_gen.rs  registry.rs  scheduler.rs  temp_funcs.rs  time_buffer.rs
jraph-py/: Cargo.toml  pyproject.toml
mimo-bench/: config.py  harness.py
scripts/: analyze_sched.py  average_time.py  bilateral-comp.py  heatmap.py  plot_performance.py  scheduler_visualize.py  timingfile.py  tomii-vs-taskflow.py  utils.py  validate_recording.py  wavefront-comp.py  wavefront-formulation.py
shared/: Cargo.toml  build.rs
src/: executor.rs  funcs.rs  graph.json  graph_gen.rs  graph_struct.rs  lib.rs  python_api.rs
synstream/: __init__.py  __main__.py  _builder.py  _generated.py  _graph.py  _loop.py  _node.py  _run_config.py  _runner.py  _schema.py  _serialize.py  _types.py  _var.py
synstream-converter/: Cargo.toml
synstream-core/: Cargo.toml  build.rs  transformer.py
synstream-core/src/: async_recorder.rs  batch_queue.rs  buffers.rs  clerk.rs  clerk_structs.rs  core_alloc.rs  custom_scheduler.rs  debug.rs  graph.rs  graph_gen.rs  graph_struct.rs  json_structs.rs  lib.rs  network.rs  network_funcs.rs  obj_gen.rs  resolution_state.rs  runtime.rs  runtime_funcs.rs  scheduler.rs  scheduler_new.rs  time_buffer.rs  utils_rdtsc.rs  worker_range.rs
synstream-core/src/buffers/: mod.rs  node_dep.rs  result_map.rs
synstream-core/src/custom_scheduler/: builder.rs  channels.rs  mod.rs  worker.rs
synstream-core/src/runtime/: arg_resolution.rs  batch_resolution.rs  init.rs  mod.rs  network_init.rs  node_cache.rs  packet_processing.rs  reporting.rs  resolution_loop.rs  scheduling.rs  shared_data.rs  slot_lifecycle.rs  slot_management.rs  successor.rs  task_execution.rs  thread_locals.rs  threading.rs
synstream-core/src/time_buffer/: buffer.rs  mod.rs  report.rs
synstream-macro/: Cargo.toml
synstream-types/: Cargo.toml
synstream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
taskflow-bench/: Makefile  memory_footprint_probe  node_size_probe  (+3 more)
timely-bench/: Cargo.toml  run_wavefront.sh
timely-bench/src/: lib.rs
tomii-converter/: Cargo.toml  README.md
tomii-converter/src/: c_header.rs  lib.rs
tomii-core/: Cargo.toml  PLUGIN_SCHEDULER_API.md  README.md  build.rs  transformer.py
tomii-core/src/: async_recorder.rs  core_alloc.rs  debug.rs  dependency_counter.rs  graph.rs  graph_gen.rs  graph_struct.rs  json_structs.rs  lib.rs  network.rs  network_funcs.rs  obj_gen.rs  resolution_state.rs  scheduler.rs  utils_rdtsc.rs  worker_range.rs
tomii-core/src/buffers/: mod.rs  node_dep.rs  node_info.rs  result_map.rs
tomii-core/src/custom_scheduler/: builder.rs  channels.rs  mod.rs  worker.rs
tomii-core/src/runtime/: ARCHITECTURE.md  arg_resolution.rs  batch_resolution.rs  consts.rs  init.rs  mod.rs  network_init.rs  node_cache.rs  ordering.rs  packet_processing.rs  reporting.rs  resolution_loop.rs  resolution_strategy.rs  scheduling.rs  shared_data.rs  slot_lifecycle.rs  slot_management.rs  successor.rs  task_execution.rs  thread_locals.rs  threading.rs
tomii-core/src/time_buffer/: buffer.rs  mod.rs  report.rs
tomii-core/tests/: integration.rs
tomii-macro/: Cargo.toml  README.md
tomii-macro/src/: lib.rs
tomii-types/: Cargo.toml  README.md
tomii-types/src/: lib.rs
tomii/_python_bridge/: Cargo.toml  build.rs
tomii/_python_bridge/src/: lib.rs
(+305 files in other folders)
