[workspace]
members = [
    "tomii-core",
    "tomii-types",
    "tomii-macro",
    "tomii-converter",
    "examples/*",
]
exclude = [
    # Pure-C examples: no Rust source; built with Make, not Cargo.
    "examples/matrix-compute-C",
    "examples/mapreduce",
    # Pure-Python examples: no Rust source; bridge is in tomii/_python_bridge/.
    "examples/matrix-compute-python",
]
resolver = "3"

[profile.release]
opt-level = 3
debug = false 
lto = "thin"
codegen-units = 1
