[workspace]
members = [
    "tomii-core",
    "tomii-types",
    "tomii-macro",
    "tomii-converter",
    "tomii/_python_bridge",
    "examples/*",
]
exclude = [
    # Pure-C examples: no Rust source; built with Make, not Cargo.
    "examples/matrix-compute-C",
    "examples/mapreduce",
    "examples/gpu-vectoradd",
    # Pure-Python examples: no Rust source; bridge is in tomii/_python_bridge/.
    "examples/matrix-compute-python",
    # Stale worktree remnant from a prunable branch; exclude to avoid broken path dep.
    "examples/.mimolib",
    # agent-tuning has no Cargo.toml (Python/shell harness only).
    "examples/agent-tuning",
]
resolver = "3"

# Shared metadata inherited by the publishable crates via `field.workspace = true`.
[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Τομί Team"]
repository = "https://github.com/Giotyp/Tomii"

[profile.release]
opt-level = 3
debug = false 
lto = "thin"
codegen-units = 1
