[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tomii"
version = "0.1.0"
description = "Python API for the Τομί task-graph framework"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "matplotlib>=3.0"]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tomii*"]

[tool.pytest.ini_options]
testpaths = ["tomii/tests"]

[tool.mypy]
packages = ["tomii"]
strict = true
