[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "tomii"
version = "1.0.0"
description = "Python API for the Τομί task-graph framework"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Τομί Team" }]
keywords = ["task-graph", "streaming", "mimo", "scheduling", "low-latency"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: System :: Distributed Computing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = ["pydantic>=2.0", "matplotlib>=3.0"]

[project.urls]
Homepage = "https://github.com/Giotyp/Tomii"
Repository = "https://github.com/Giotyp/Tomii"
Changelog = "https://github.com/Giotyp/Tomii/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]
agent-tuning = [
    "optuna>=3",
]

[tool.maturin]
# Bridge crate — the only Rust artifact compiled into the wheel.
manifest-path = "tomii/_python_bridge/Cargo.toml"
# Place the extension at tomii/_lib/tomii_python_bridge.<abi-tag>.so
module-name = "tomii._lib.tomii_python_bridge"
# Python sources live in the project root alongside Cargo.toml
python-source = "."
# Bundle the pre-built tomii binary (copied by the `wheel` Makefile target)
include = [{ path = "tomii/_bin/**", format = ["wheel"] }]
# Exclude Rust sources and build artefacts that are not Python runtime deps
exclude = [
    "tomii/_python_bridge/**",
    "tomii/tests/**",
    "**/__pycache__/**",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tomii/tests"]

[tool.mypy]
packages = ["tomii"]
strict = true
