[package]
name = "jraph-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "jraph_core"
path = "src/lib.rs"

[dependencies]
cst_macros = { path = "../cst_macros" }
shared = { path = "../shared" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
libc = "0.2.165"
rayon = "1.10.0"
core_affinity = "0.8.1"
num-complex = "0.4.5"

nalgebra = "0.32.5"
lapack = "0.19.0"
cblas = "0.4.0"
intel-mkl-src = { version = "0.8.1", features = ["mkl-dynamic-lp64-seq"]}

[build-dependencies]
build-print = "0.1.1"