[package]
name = "synstream-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
libc = "0.2.165"
rayon = "1.10.0"
core_affinity = "0.8.1"
crossbeam-channel = "0.5"
itertools = "0.14.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
libloading = "0.8"
clap = { version = "4.5.39", features = ["derive"] }
synstream-types = { path = "../synstream-types" }
gag = "1.0.0"
rapidhash = "4.1.0"

[build-dependencies]
build-print = "0.1.1"

[profile.release]
opt-level = 3
debug = false 
lto = "thin"
codegen-units = 1