[package]
name = "timely-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stream_bench"
path = "src/bin/stream_bench.rs"

[[bin]]
name = "pagerank"
path = "src/bin/pagerank.rs"

[[bin]]
name = "wavefront"
path = "src/bin/wavefront.rs"

[dependencies]
timely = "0.26"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
memmap2 = "0.9"
[workspace]
