[package]
name = "tomii-converter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time tool that converts Rust/C plugin headers into Tomii wrapper and registry files"
keywords = ["tomii", "codegen", "plugin", "ffi", "build-tool"]
categories = ["development-tools::build-utils", "parsing"]
readme = "README.md"

[lib]
name = "tomii_converter"

[[bin]]
name = "tomii-converter"
path = "src/bin/main.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
