[package]
name = "tomii-core"
version = "0.1.0"
edition = "2021"
description = "Low-latency streaming task-graph runtime for MIMO consumer-producer pipelines"
license = "MIT OR Apache-2.0"
keywords = ["streaming", "task-graph", "runtime", "scheduling", "low-latency"]
categories = ["concurrency", "science", "network-programming"]

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

# Feature flags
# - `cli`       : Builds the command-line runner binary (enables clap + gag)
# - `network`   : UDP/TCP packet reception and dedicated receiver threads
# - `recording` : AsyncRecorder + per-thread timing CSV output
# - `rdtsc`     : x86 RDTSC-based high-resolution timing (x86_64 only)
# TODO: gate `schemars` behind a feature once all `#[derive(JsonSchema)]` uses
#       in json_structs.rs are wrapped with `#[cfg_attr(feature = "schemars", ...)]`
[features]
default = ["network", "recording", "cli"]
cli = ["dep:clap", "dep:gag", "dep:tracing-subscriber"]
network = []
recording = []
# Enables no-op function fallback when get_func() returns None.
# Used by integration tests which run without a plugin dylib.
test-utils = []
rdtsc = []
# Kept as a no-op alias for backward compatibility with crates that activate it.
# The TaskScheduler trait and SchedulerImpl::Plugin variant are now unconditional.
plugin-scheduler = []
# Links libpython directly into the tomii-core binary so that Python symbols
# are globally visible before the bridge dylib is dlopen'd. Eliminates the
# LD_PRELOAD workaround and enables cross-platform embedding (Linux/macOS/Windows).
# Also enables the bridge ABI version check at startup.
embed-python = ["dep:pyo3"]

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0.116"
libc = "0.2.165"
rayon = "1.10.0"
core_affinity = "0.8.1"
flume = "0.11"
crossbeam-channel = "0.5"
libloading = "0.8"
clap = { version = "4.5.39", features = ["derive"], optional = true }
tomii-types = { path = "../tomii-types" }
gag = { version = "1.0.0", optional = true }
# Required by embed-python feature: initializes the embedded Python interpreter
# and links libpython into the tomii-core binary.
pyo3 = { version = "0.22", optional = true }
rapidhash = "4.1.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[build-dependencies]
build-print = "0.1.1"
tomii-converter = { path = "../tomii-converter" }