[package]
name = "tomii-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for wrapping plugin functions for the Tomii task-graph runtime"
keywords = ["tomii", "macro", "plugin", "task-graph", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
