[package]
name = "tomii-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-erased value types (CmTypes) shared across Tomii plugins and runtime"
keywords = ["tomii", "streaming", "task-graph", "types"]
categories = ["data-structures", "concurrency"]
readme = "README.md"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0"
rapidhash = "4.1.0"
num-complex = "0.4.6"
parking_lot = "0.12"
