[package]
name = "matrix-compute"
version = "0.1.0"
edition = "2021"

[lib]
name = "matcomp"
crate-type = ["dylib", "rlib"]

[[bin]]
name = "perfval"
path = "src/main.rs"

[dependencies]
nalgebra = "0.34.1"
num-complex = "0.4.6"
rustfft = "6.4.1"
synstream-types = { path = "../../synstream-types" }
clap = { version = "4.5", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"

