[workspace]

[package]
name = "mimo-bench-tomii"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
tomii-types = {path = "../../../tomii-types"}
tomii-macro = {path = "../../../tomii-macro"}
num-complex = "0.4.5"
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
lapack = "0.19.0"
cblas = "0.4.0"
intel-mkl-src = { version = "0.8.1", features = ["mkl-dynamic-lp64-seq"]}
libc = "0.2.172"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
ittapi = "0.5.0"

[build-dependencies]
cc = "1.0.83"
